--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,25 @@
+####################################
+#PG
+#development:
+#  adapter: postgresql
+#  encoding: unicode
+#  database: sqlteacher
+#  pool: 5
+#  username: postgres
+#  password: jl2459
+#  host: localhost
+#  port: 5432
+#####################################
 
+#####################################
+#mysql
 development:
-  adapter: postgresql
-  encoding: unicode
-  database: sqlteacher
-  pool: 5
-  username: postgres
-  password: jl2459
+  adapter: mysql2
+  database: final
+  username: 03219223109
+  password:
   host: localhost
-  port: 5432
-
-
+#####################################
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
